# dbn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yaml  build.yml  release.yaml  release.yml
c/: Cargo.toml  README.md  build.rs  cbindgen.toml
c/src/: cfile.rs  compat.rs  decode.rs  lib.rs  metadata.rs  text_serialization.rs
python/: Cargo.toml  README.md  build.rs  databento_dbn.pyi  pyproject.toml
python/python/databento_dbn/: __init__.py  _lib.pyi  metadata.py  v1.py  v2.py  v3.py
python/src/: dbn_decoder.rs  encode.rs  enums.rs  lib.rs  transcoder.rs
rust/dbn/: Cargo.toml  README.md
rust/dbn-cli/: Cargo.toml  README.md
rust/dbn-cli/src/: encode.rs  filter.rs  lib.rs  main.rs
rust/dbn-cli/tests/: integration_tests.rs
rust/dbn-macros/: Cargo.toml
rust/dbn-macros/src/: dbn_attr.rs  debug.rs  has_rtype.rs  lib.rs  py_field_desc.rs  py_repr.rs  serialize.rs  utils.rs
rust/dbn-macros/tests/ui/: csv_serialize_conflicting_dbn_attr.rs  csv_serialize_conflicting_dbn_attr.stderr  csv_serialize_duplicate_encode_orders.rs  csv_serialize_duplicate_encode_orders.stderr  csv_serialize_invalid_dbn_attr.rs  csv_serialize_invalid_dbn_attr.stderr  json_serialize_conflicting_dbn_attr.rs  json_serialize_conflicting_dbn_attr.stderr  json_serialize_duplicate_encode_orders.rs  json_serialize_duplicate_encode_orders.stderr  json_serialize_invalid_dbn_attr.rs  json_serialize_invalid_dbn_attr.stderr  missing_rtype.rs  missing_rtype.stderr
rust/dbn/examples/: serde-example.rs
rust/dbn/src/: compat.rs  decode.rs  encode.rs  enums.rs  error.rs  flags.rs  json_writer.rs  lib.rs  macros.rs  metadata.rs  pretty.rs  publishers.rs  python.rs  read.rs  record.rs  record_buf.rs  record_enum.rs  record_ref.rs  symbol_map.rs  test_utils.rs  v1.rs  v2.rs  v3.rs
rust/dbn/src/compat/: traits.rs
rust/dbn/src/decode/: compat.rs  dbn.rs  dbz.rs  dyn_decoder.rs  dyn_reader.rs  error_utils.rs  merge.rs  mod.rs  stream.rs  zstd.rs
rust/dbn/src/decode/dbn/: aligned_buffer.rs  async.rs  fsm.rs  sync.rs
rust/dbn/src/encode/: csv.rs  dbn.rs  dyn_encoder.rs  dyn_writer.rs  io_utils.rs  json.rs  mod.rs  split.rs
rust/dbn/src/encode/csv/: serialize.rs  sync.rs
rust/dbn/src/encode/dbn/: async.rs  sync.rs
rust/dbn/src/encode/json/: async.rs  serialize.rs  sync.rs
rust/dbn/src/enums/: methods.rs
rust/dbn/src/metadata/: merge.rs
rust/dbn/src/python/: conversions.rs  enums.rs  metadata.rs  record.rs  repr.rs
rust/dbn/src/record/: conv.rs  impl_default.rs  layout_tests.rs  methods.rs  record_methods_tests.rs  traits.rs  with_ts_out_methods.rs
rust/dbn/src/v1/: impl_default.rs  methods.rs
rust/dbn/src/v2/: impl_default.rs  methods.rs
rust/dbn/src/v3/: impl_default.rs  methods.rs
rust/dbn/src/write/: csv.rs  dbn.rs  json.rs  mod.rs
rust/dbz/: Cargo.toml  README.md
rust/dbz-cli/: Cargo.toml  README.md
rust/dbz-cli/src/: lib.rs  main.rs
rust/dbz-cli/tests/: integration_tests.rs
rust/dbz/src/: python.rs  read.rs
rust/dbz/src/write/: csv.rs  dbz.rs  json.rs  mod.rs
scripts/: build.sh  bump_version.sh  config.sh  format.sh  get_version.sh  lint.sh  regenerate_test_data.sh  test.sh
src/dbz-cli/: Cargo.toml  README.md
src/dbz-cli/src/: lib.rs  main.rs
src/dbz-cli/tests/: integration_tests.rs  tests.rs
src/dbz-lib/: Cargo.toml  README.md  build.rs
src/dbz-lib/src/: lib.rs  python.rs  read.rs
src/dbz-lib/src/write/: csv.rs  dbz.rs  json.rs  mod.rs
src/dbz-python/: Cargo.toml  README.md  pyproject.toml
src/dbz-python/src/: lib.rs
tests/data/: multi-frame.definition.dbn.frag.zst  test_data.bbo-1m.dbn  test_data.bbo-1s.dbn  test_data.cbbo-1s.dbn  test_data.cbbo-1s.dbn.zst  test_data.cmbp-1.dbn  test_data.cmbp-1.dbn.zst  test_data.definition.dbn  test_data.definition.dbn.frag  test_data.definition.dbn.frag.zst  test_data.definition.dbn.zst  test_data.definition.dbz  test_data.definition.v1.dbn.frag  test_data.definition.v1.dbn.frag.zst  test_data.definition.v3.dbn.frag  test_data.definition.v3.dbn.frag.zst  test_data.imbalance.dbn  test_data.imbalance.v1.dbn  test_data.mbo.dbn  test_data.mbo.dbn.zst  test_data.mbo.v1.dbn  test_data.mbp-1.dbn  test_data.mbp-1.dbn.zst  test_data.mbp-10.dbn  test_data.mbp-10.dbn.zst  test_data.mbp-10.v1.dbn  test_data.ohlcv-1d.dbn  test_data.ohlcv-1d.dbn.zst  test_data.ohlcv-1d.v1.dbn  test_data.ohlcv-1h.dbn  test_data.ohlcv-1h.dbn.zst  test_data.ohlcv-1h.v1.dbn  test_data.ohlcv-1m.dbn  test_data.ohlcv-1m.dbn.zst  test_data.ohlcv-1m.v1.dbn  test_data.ohlcv-1s.dbn  test_data.ohlcv-1s.dbn.zst  test_data.statistics.dbn  test_data.status.dbn  test_data.tbbo.dbn  (+5 more)
