[workspace]
members = [
  "c",
  "python",
  "rust/dbn-cli",
  "rust/dbn-macros",
  "rust/dbn"
]
resolver = "2"

[workspace.package]
authors = ["Databento <support@databento.com>"]
edition = "2021"
version = "0.33.1"
documentation = "https://databento.com/docs"
repository = "https://github.com/databento/dbn"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.98"
csv = "1.3"
pyo3 = "0.24.2"
pyo3-build-config = "0.24.2"
rstest = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
time = "0.3.41"
zstd = "0.13"
