[workspace]
members = [
  "c",
  "python",
  "rust/dbn-cli",
  "rust/dbn-macros",
  "rust/dbn"
]
resolver = "2"

[workspace.package]
authors = ["Databento <support@databento.com>"]
edition = "2021"
version = "0.48.0"
documentation = "https://databento.com/docs"
repository = "https://github.com/databento/dbn"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
csv = "1.4"
pyo3 = "0.27.2"
pyo3-build-config = "0.27.2"
rstest = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
time = "0.3.45"
zstd = "0.13"
