[package]
name = "dbn-c"
authors = ["Databento <support@databento.com>"]
version = "0.10.0"
edition = "2021"
description = "C bindings for working with Databento Binary Encoding (DBN)"
license = "Apache-2.0"
repository = "https://github.com/databento/dbn"
# This crate should not be published
publish = false

[lib]
name = "dbn_c"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.72"
# DBN library
dbn = { path = "../rust/dbn", features = [] }
libc = "0.2.147"

[build-dependencies]
cbindgen = { version = "0.24.5", default-features = false }
