[package]
name = "dbn-c"
description = "C bindings for working with Databento Binary Encoding (DBN)"
# This crate should not be published
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "dbn_c"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.80"
# DBN library
dbn = { path = "../rust/dbn", features = [] }
libc = "0.2.153"

[build-dependencies]
cbindgen = { version = "0.26.0", default-features = false }
