[package]
name = "dbn-c"
description = "C bindings for working with Databento Binary Encoding (DBN)"
# This crate should not be published
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "dbn_c"
crate-type = ["staticlib"]

[dependencies]
anyhow = { workspace = true }
dbn = { path = "../rust/dbn", features = [] }
libc = "0.2.162"

[build-dependencies]
cbindgen = { version = "0.27.0", default-features = false }
