[package]
name = "databento-dbn"
authors = ["Databento <support@databento.com>"]
version = "0.8.2"
edition = "2021"
description = "Python library written in Rust for working with Databento Binary Encoding (DBN)"
license = "Apache-2.0"
repository = "https://github.com/databento/dbn"
# This crate should only be published as a Python package
publish = false

[lib]
name = "databento_dbn" # Python modules can't contain dashes

[dependencies]
# DBN library
dbn = { path = "../rust/dbn", features = ["python"] }
# Python bindings for Rust
pyo3 = "0.19"

[build-dependencies]
pyo3-build-config = { version = "0.19" }
