[package]
name = "databento-dbn"
description = "Python library written in Rust for working with Databento Binary Encoding (DBN)"
# This crate should only be published as a Python package
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "databento_dbn" # Python modules can't contain dashes

[dependencies]
# DBN library
dbn = { path = "../rust/dbn", features = ["python"] }
# Python bindings for Rust
pyo3 = "0.20"
# Dates and datetimes
time = "0.3.31"

[build-dependencies]
pyo3-build-config = { version = "0.20" }

[dev-dependencies]
# parameterized testing
rstest = "0.18.2"
