[tool.poetry]
name = "databento-dbn"
version = "0.17.0"
description = "Python bindings for encoding and decoding Databento Binary Encoding (DBN)"
authors = ["Databento <support@databento.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
maturin = ">=1.0"

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "databento-dbn"
version = "0.17.0"
authors = [
    { name = "Databento", email = "support@databento.com" }
]
description = "Python bindings for encoding and decoding Databento Binary Encoding (DBN)"
readme = "README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "databento_dbn._lib"
