[package]
name = "dbn-cli"
description = "Command-line utility for converting Databento Binary Encoding (DBN) files to text-based formats"
default-run = "dbn"
keywords = ["market-data", "json", "csv", "conversion", "encoding"]
# see https://crates.io/category_slugs
categories = ["command-line-utilities", "encoding"]
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dbn"
path = "src/main.rs"

[dependencies]
dbn = { path = "../dbn", version = "=0.18.1", default-features = false }

anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { workspace = true, features = ["derive"] }
zstd = { workspace = true }

[dev-dependencies]
# CLI integration tests
assert_cmd = "2.0.14"
# assert_cmd companion
predicates = "3.1.0"
rstest = { workspace = true }
# A library for managing temporary files and directories
tempfile = "3.10.1"
