[package]
name = "dbn-macros"
description = "Proc macros for dbn crate"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
# Get name of current crate in macros, like $crate in macro_rules macros
proc-macro-crate = "3.0.0"
proc-macro2 = "1.0.76"
# Convert code to token streams
quote = "1.0.35"
# Token parsing
syn = { version = "2.0.48", features = ["full"] }

[dev-dependencies]
csv = "1"
dbn = { path = "../dbn" }
trybuild = "1.0.88"
