[package]
name = "dbn"
authors = ["Databento <support@databento.com>"]
version = "0.7.0"
edition = "2021"
description = "Library for working with Databento Binary Encoding (DBN)"
license = "Apache-2.0"
repository = "https://github.com/databento/dbn"
keywords = ["finance", "market-data", "conversion", "encoding", "trading"]
# see https://crates.io/category_slugs
categories = ["encoding"]

[features]
default = []
async = ["dep:async-compression", "dep:tokio"]
python = ["dep:pyo3", "dep:strum"]
serde = ["dep:serde"]
# Enables deriving the `Copy` trait for records.
trivial_copy = []

[dependencies]
dbn-macros = { version = "=0.7.0", path = "../dbn-macros" }

# error handling
anyhow = "1.0"
# async (de)compression
async-compression = { version = "0.3.15", features = ["tokio", "zstd"], optional = true }
# CSV serialization
csv = ">=1.2.2"
# Deriving translation between integers and enums
num_enum = "0.6"
# Python bindings for Rust
pyo3 = { version = "0.19.0", optional = true }
# JSON serialization
json-writer = "0.3"
# deserialization
serde = { version = "1.0", features = ["derive"], optional = true }
# zero-copy DBN decoding
streaming-iterator = "0.1.9"
# extra enum traits for Python
strum = { version = "0.25", features = ["derive"], optional = true }
# date and datetime support
time = { version = "0.3", features = ["formatting", "macros"] }
# async traits
tokio = { version = "1.27", features = ["io-util"], optional = true }
# (de)compression
zstd = "=0.12.3"

[dev-dependencies]
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.27", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
