[package]
name = "dbn"
authors = ["Databento <support@databento.com>"]
version = "0.8.1"
edition = "2021"
description = "Library for working with Databento Binary Encoding (DBN)"
license = "Apache-2.0"
repository = "https://github.com/databento/dbn"
keywords = ["finance", "market-data", "conversion", "encoding", "trading"]
# see https://crates.io/category_slugs
categories = ["encoding"]

[package.metadata.docs.rs]
# Document all features on docs.rs
all-features = true

[features]
default = []
async = ["dep:async-compression", "dep:tokio"]
python = ["dep:pyo3", "dep:strum"]
serde = ["dep:serde", "time/parsing", "time/serde"]
# Enables deriving the `Copy` trait for records.
trivial_copy = []

[dependencies]
dbn-macros = { version = "=0.8.1", path = "../dbn-macros" }

# async (de)compression
async-compression = { version = "0.4.1", features = ["tokio", "zstd"], optional = true }
# CSV serialization
csv = ">=1.2.2"
# Deriving translation between integers and enums
num_enum = "0.6"
# Python bindings for Rust
pyo3 = { version = "0.19", optional = true }
# JSON serialization
json-writer = "0.3"
# deserialization
serde = { version = "1.0", features = ["derive"], optional = true }
# zero-copy DBN decoding
streaming-iterator = "0.1.9"
# extra enum traits for Python
strum = { version = "0.25", features = ["derive"], optional = true }
# Custom error helper
thiserror = "1.0"
# date and datetime support
time = { version = "0.3", features = ["formatting", "macros"] }
# async traits
tokio = { version = "1", features = ["io-util"], optional = true }
# (de)compression
zstd = "0.12"

[dev-dependencies]
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.29", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
