[package]
name = "dbz"
authors = ["Databento <support@databento.com>"]
version = "0.2.1"
edition = "2021"
description = "Library for working with the Databento Binary Encoding (DBZ) format"
license = "Apache-2.0"
repository = "https://github.com/databento/dbz"
keywords = ["market-data", "json", "csv", "conversion", "encoding"]
# see https://crates.io/category_slugs
categories = ["encoding"]

[features]
default = []
python = ["pyo3/extension-module"]
# `cargo test` fails with linker errors when the extension-module feature is
# enabled, see https://github.com/PyO3/pyo3/issues/340
python-test = ["pyo3"]

[dependencies]
# Databento common definitions
databento-defs = { version = "0.3.1", features = ["serde"] }

# error handling
anyhow = "1.0.65"
# CSV serialization
csv = "1.1.6"
# logging
log = "0.4.17"
# Python bindings for Rust
pyo3 = { version = "0.17.1", optional = true }
# Derialization
serde = { version = "1.0", features = ["derive"] }
# JSON serialization
serde_json = "1.0"
# zero-copy DBZ decoding
streaming-iterator = "0.1.8"
# date and datetime support
time = { version = "0.3.14", features = ["serde"] }
# decompression from DBZ
zstd = "= 0.11.2+zstd1.5.2"
