[package]
name = "dbz-lib"
authors = ["Databento <support@databento.com>"]
version = "0.1.6"
edition = "2021"
description = "Library for working with the Databento Binary Encoding (DBZ) format"
license = "Apache-2.0"
repository = "https://github.com/databento/dbz"
keywords = ["market-data", "json", "csv", "conversion", "encoding"]
# see https://crates.io/category_slugs
categories = ["encoding"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
# Databento common definitions
databento-defs = { git = "https://github.com/databento/databento-defs", branch = "dev", features = ["serde"], version = "0.2.0" }

# error handling
anyhow = "1.0.65"
# CSV serialization
csv = "1.1.6"
# logging
log = "0.4.17"
# Python bindings for Rust
pyo3 = { version = "0.17.1", features = ["extension-module"], optional = true }
# Derialization
serde = { version = "1.0", features = ["derive"] }
# JSON serialization
serde_json = "1.0"
# decompression from DBZ
zstd = "= 0.11.2+zstd1.5.2"
# date and datetime support
time = { version = "0.3.14", features = ["serde"] }
